# LLMMap

./: .env.example  .gitignore  LICENSE  Procfile  README.md  llmmap.py  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  AUTHORIZATION.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FINGERPRINTING_DESIGN.md  PROMPTLAB.md  REAL_MODE_DESIGN.md  ROADMAP.md  SCENARIO_KNOWLEDGE_ASSISTANT.md  SCENARIO_MEMORY_BOT.md  TODO.md
docs/assets/: CAPTURE_GUIDE.md  capture.mjs
examples/: ollama_gateway_app.py
examples/payloads/: oob_stage1.yaml
examples/requests/: ollama_gateway_request.txt
llmmap/: __init__.py  cli.py  config.py
llmmap/core/: audit.py  conversation.py  dataflow.py  fingerprint.py  goal_judge.py  http_client.py  injection_points.py  models.py  oob.py  orchestrator.py  pattern_detection.py  pivot.py  prompt_generator.py  reliability.py  request_loader.py  request_mutator.py  run.py  scanner.py  sensitive.py  tap.py  tap_roles.py  tap_scoring.py  ui.py
llmmap/detectors/: __init__.py  base.py  hub.py  judge.py  semantic.py
llmmap/llm/: __init__.py  client.py  providers.py
llmmap/modules/: __init__.py  mutation.py
llmmap/prompts/: __init__.py  loader.py  obfuscations.py  render.py  schema.py  selector.py
llmmap/prompts/packs/: pack_a_baseline.yaml  pack_b_extended.yaml  pack_c_master_checklist.yaml  (+1 more)
llmmap/reporting/: writer.py
llmmap/utils/: logging.py
promptlab/: __init__.py
promptlab/api/: main.py
promptlab/engine/: schemas.py  simulator.py
promptlab/scenarios/: registry.py  targets.py
tests/: test_cli.py  test_detectors.py  test_fingerprint.py  test_http_client.py  test_injection_points.py  test_integration_mvp.py  test_llm_client.py  test_oob.py  test_pattern_detection.py  test_phase2.py  test_pivot.py  test_profiles.py  test_prompt_framework.py  test_reliability.py  test_reporting.py  test_request_loader.py  test_request_mutator.py  test_run_workspace.py  test_secret_hints.py  test_sensitive.py  test_tap.py  test_tap_roles.py  test_tap_scoring.py
tests/promptlab/: test_api.py  test_scenarios.py  test_simulator.py
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
(+1 files in other folders)
